fix interests spacing

--- a/public/stylesheets/events/show.css
+++ b/public/stylesheets/events/show.css
@@ -54,3 +54,11 @@ section div:nth-child(even) {
   grid-column: 2 / 3;
   margin-bottom: 24px;
 }
+
+#details {
+  font-size: 24px;
+  text-align: center;
+  /* display: flex;
+  flex-wrap: wrap;
+  padding: 100px; */
+}
